--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
+    "mime": "^3.0.0",
     "mongoose": "^7.5.3",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
